Fix schedule overlap by containing events within day columns

--- a/_sass/custom/schedule.scss
+++ b/_sass/custom/schedule.scss
@@ -42,7 +42,7 @@
       left: 0;
       position: absolute;
       top: 0;
-      width: 100%;
+      width: 9999px;
     }
   }
 
@@ -57,6 +57,8 @@
     flex: 1 0 0;
     margin: 0;
     min-width: 120px;
+    overflow: hidden;
+    position: relative;
 
     &:first-of-type {
       border-left: 0;
@@ -73,7 +75,6 @@
   }
 
   .schedule-events {
-    display: flex;
     padding: 0;
     position: relative;
   }
